feat: Initialize project with core frontend components, backend APIs, and database schema.

--- a/backend/package.json
+++ b/backend/package.json
@@ -82,5 +82,8 @@
     "typescript": "^5.9.3"
   },
   "main": ".eslintrc.js",
-  "keywords": []
+  "keywords": [],
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }
 }
